--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,7 @@
   right: 5px;
 }
 #question{
-  color: red;
+  color: #941a1d;
   padding-bottom: 30px;
 }
 #whycome{
@@ -25,7 +25,7 @@
   font-size: 80px;
 }
 #redbox{
-  background-color: crimson;
+  background-color: #941a1d;
   padding: 10%;
   height: 100%;
 }
@@ -35,10 +35,18 @@
   height: 100%;
 }
 .header {
-  background: url("../assets/images/bg-about.jpg");
+  background: url("../assets/images/bg-about.png");
   background-position: right top;
   background-size: cover;
 }
+/* .left-square {
+  position: absolute;
+  top: 20%;
+  bottom: 20%;
+  width: 60%;
+  left: -30%;
+  border: 25px solid #941a1d;
+} */
 .my-icon-next{
   content: url("../assets/images/next-icon.png") !IMPORTANT;
   position: absolute;
@@ -137,8 +145,8 @@
 
 .ourProfiles h5{
   font-size: 14px;
-  margin-top: 0px;
-  margin-bottom: 5px;
+  margin-top: 8px;
+  margin-bottom: 0px;
   font-family: avn-regular, pf-regular;
 }
 
@@ -153,7 +161,7 @@
 
 .active, .teamBars:hover {
   font-weight: 800;
-  color: crimson;
+  color: #941a1d;
 }
 .fade-in {
   -webkit-animation-name: fade;
@@ -166,6 +174,13 @@
   font-family: avn-regular, pf-regular;
   text-align: justify;
 }
+
+.play-summary {
+  font-family: avn-regular, pf-regular;
+  text-align: justify;
+  font-size: 20px;
+}
+
 
 @-webkit-keyframes fade {
   from {opacity: 0}
@@ -182,5 +197,35 @@
 }
 
 .links a:hover {
-  color: crimson;
+  color: #941a1d;
+}
+
+/*
+================
+SECTION Contact
+================
+*/
+
+#section-contact {
+  background-color: #343332;
+  color: #E6E6E6;
+}
+
+.contact-icon {
+  font-size: 50px;
+  color: #E6E6E6;
+  line-height: 30px;
+}
+
+.contact-caption {
+  font-family: avn-ultra, pf-light;
+  letter-spacing:2px;
+}
+
+.txt-4-icon {
+  font-size: 15px;
+}
+
+#jump-txt {
+  letter-spacing: 3px;
 }
