--- a/css/header.css
+++ b/css/header.css
@@ -4,14 +4,14 @@
   background-size: cover;
 }
 
-.left-square {
+/* .left-square {
   position: absolute;
   top: 20%;
   bottom: 20%;
   width: 60%;
   left: -30%;
   border: 25px solid crimson;
-}
+} */
 
 .site-caption {
   font-size: 60px;
