--- a/css/innotalk.css
+++ b/css/innotalk.css
@@ -96,7 +96,7 @@ InnoTalk
   height: 120%;
 }
 .header {
-  background: url("../assets/images/bg-innotalk.jpg");
+  background: url("../assets/images/the-visit.jpg");
   background: grayscale(100%);
   background-position: right top;
   background-size: cover;
@@ -160,382 +160,34 @@ InnoTalk
   background-color: rgba(70,70,70,.25);
 }
 
-.carousel-indicators .active {
-  background-color: #444;
-}
-.intro-container{
-  padding-top: 10%;
-  background-color: white;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-.white-container {
-  background-color: white;
-  padding-top: 10%;
-  display: none;
-}
-.carousel-item{
-  margin-bottom: 10%;
+
+
+/*
+================
+SECTION Contact
+================
+*/
+
+#section-contact {
+  background-color: #343332;
+  color: #E6E6E6;
 }
 
-.team-profile{
-  padding: 5%;
+.contact-icon {
+  font-size: 50px;
+  color: #E6E6E6;
+  line-height: 30px;
 }
 
-.team-profile h2{
-  font-family: avn-demi, pf-heavy, pf-medium;
+.contact-caption {
+  font-family: avn-ultra, pf-light;
+  letter-spacing:2px;
+}
+
+.txt-4-icon {
+  font-size: 15px;
+}
+
+#jump-txt {
   letter-spacing: 3px;
-  text-transform: uppercase;
-}
-
-.ourProfiles{
-  display: none;
-  padding: 2%;
-}
-
-.ourProfiles h4{
-  font-size: 18px;
-  margin-top: 5px;
-  margin-bottom: 3px;
-}
-
-.ourProfiles h5{
-  font-size: 14px;
-  margin-top: 0px;
-  margin-bottom: 5px;
-  font-family: avn-regular, pf-regular;
-}
-
-.links {
-  margin-bottom: 15px;
-}
-
-.teamBars{
-  cursor: pointer;
-  padding-top: 2%;
-}
-
-.active, .teamBars:hover {
-  font-weight: 800;
-  color: crimson;
-}
-.fade-in {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-.summary {
-  font-size:15px;
-  font-family: avn-regular, pf-regular;
-  text-align: justify;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: 0}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: 0}
-  to {opacity: 1}
-}
-
-.links a {
-  color: black;
-}
-
-.links a:hover {
-  color: crimson;
-}
-
-/* Time line */
-
-
-#speaker-section-title {
-  background-color: white;
-}
-
-.section-title {
-  font-size: 60px;
-  height: 160px;
-  width: 100%;
-}
-
-.timeline {
-  position: relative;
-  width: 750px;
-  margin: 0 auto;
-  padding: 1em 0;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  list-style-type: none;
-}
-
-.timeline:before {
-  position: absolute;
-  left: 50%;
-  top: 0;
-  content: ' ';
-  display: block;
-  width: 6px;
-  height: 100%;
-  margin-left: -3px;
-  background: rgb(80,80,80);
-  background: -moz-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(30,87,153,1)), color-stop(100%,rgba(125,185,232,1)));
-  background: -webkit-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: -o-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: -ms-linear-gradient(top, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-  background: linear-gradient(to bottom, rgba(80,80,80,0) 0%, rgb(80,80,80) 8%, rgb(80,80,80) 92%, rgba(80,80,80,0) 100%);
-
-  z-index: 5;
-}
-
-.timeline li {
-  padding: 1em 0;
-}
-
-.timeline li:after {
-  content: "";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-.direction-l {
-  position: relative;
-  width: 345px;
-  float: left;
-  text-align: right;
-}
-
-.direction-r {
-  position: relative;
-  width: 345px;
-  float: right;
-}
-
-.flag-wrapper {
-  position: relative;
-  display: inline-block;
-
-  text-align: center;
-}
-
-.flag {
-  position: relative;
-  display: inline;
-  background: rgb(248,248,248);
-  padding: 6px 10px;
-  border-radius: 5px;
-  font-weight: 600;
-  text-align: left;
-}
-
-.direction-l .flag {
-  -webkit-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-}
-
-.direction-r .flag {
-  -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-}
-
-.direction-l .flag:before,
-.direction-r .flag:before {
-  position: absolute;
-  top: 50%;
-  right: -36px;
-  content: ' ';
-  display: block;
-  width: 12px;
-  height: 12px;
-  margin-top: -10px;
-  background: #fff;
-  border-radius: 10px;
-  border: 4px solid rgb(255,80,80);
-  z-index: 10;
-}
-
-.direction-r .flag:before {
-  left: -36px;
-}
-
-.direction-l .flag:after {
-  content: "";
-  position: absolute;
-  left: 100%;
-  top: 50%;
-  height: 0;
-  width: 0;
-  margin-top: -8px;
-  border: solid transparent;
-  border-left-color: rgb(248,248,248);
-  border-width: 8px;
-  pointer-events: none;
-}
-
-.direction-r .flag:after {
-  content: "";
-  position: absolute;
-  right: 100%;
-  top: 50%;
-  height: 0;
-  width: 0;
-  margin-top: -8px;
-  border: solid transparent;
-  border-right-color: rgb(248,248,248);
-  border-width: 8px;
-  pointer-events: none;
-}
-
-.time-wrapper {
-  display: inline;
-  line-height: 1.1em;
-  font-size: 0.9em;
-  color: rgb(250,80,80);
-  vertical-align: middle;
-}
-
-.direction-l .time-wrapper {
-  float: left;
-}
-
-.direction-r .time-wrapper {
-  float: right;
-}
-
-.time {
-  display: inline-block;
-  padding: 4px 6px;
-  background: rgb(248,248,248);
-}
-
-.desc {
-  margin: 1em 0.75em 0 0;
-
-  font-size: 0.9em;
-  font-style: italic;
-  line-height: 1.5em;
-}
-
-.direction-r .desc {
-  margin: 1em 0 0 0.75em;
-}
-
-#section-4 {
-  background-color: white;
-  height: auto;
-  padding-bottom: 30px;
-}
-
-
-@media screen and (max-width: 660px) {
-
-.timeline {
-  width: 100%;
-  padding: 4em 0 1em 0;
-}
-
-.timeline li {
-  padding: 2em 0;
-}
-
-.direction-l,
-.direction-r {
-  float: none;
-  width: 100%;
-
-  text-align: center;
-}
-
-.flag-wrapper {
-  text-align: center;
-}
-
-.flag {
-  background: rgb(255,255,255);
-  z-index: 15;
-}
-
-.direction-l .flag:before,
-.direction-r .flag:before {
-  position: absolute;
-  top: -30px;
-  left: 52.5%;
-  content: ' ';
-  display: block;
-  width: 12px;
-  height: 12px;
-  margin-left: -9px;
-  background: #fff;
-  border-radius: 10px;
-  border: 4px solid rgb(255,80,80);
-  z-index: 10;
-}
-
-.direction-l .flag:after,
-.direction-r .flag:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: -8px;
-  height: 0;
-  width: 0;
-  margin-left: -8px;
-  border: solid transparent;
-  border-bottom-color: rgb(255,255,255);
-  border-width: 8px;
-  pointer-events: none;
-}
-
-.time-wrapper {
-  display: block;
-  position: relative;
-  margin: 4px 0 0 0;
-  z-index: 14;
-}
-
-.direction-l .time-wrapper {
-  float: none;
-}
-
-.direction-r .time-wrapper {
-  float: none;
-}
-
-.desc {
-  position: relative;
-  margin: 1em 0 0 0;
-  padding: 1em;
-  background: rgb(245,245,245);
-  -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
-  -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
-  box-shadow: 0 0 1px rgba(0,0,0,0.20);
-
-  z-index: 15;
-}
-
-.direction-l .desc,
-.direction-r .desc {
-  position: relative;
-  margin: 1em 1em 0 1em;
-  padding: 1em;
-
-  z-index: 15;
-}
-
-@media screen and (min-width: 400px ?? max-width: 660px) {
-
-.direction-l .desc,
-.direction-r .desc {
-  margin: 1em 4em 0 4em;
-}
-
 }
